...

enum CategoryColor: String, Codable {
    case CARDIO
    case CROSSTRAIN
    case CYCLING
    case GRAPPLING
    case HIIT
    case PILATES
    case POWER
    case RECOVERY
    case SWIMMING
    case STRENGTH
    case RUN
...
